name:               happlets-lib-gtk
version:            0.1.0.0
synopsis:           The "Haskell Applets" Gtk+ ver. 2 back-end for "happlets".
category:           GUI, Game
homepage:           https://github.com/RaminHAL9001/happlets-lib-gtk#readme
bug-reports:        https://github.com/RaminHAL9001/happlets-lib-gtk/issues
author:             Ramin Honary
maintainer:         ramin.honary@gmail.com
copyright:          2017-2019 Ramin Honary
license:            AGPL
license-file:       LICENSE
build-type:         Simple
cabal-version:      1.12

extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/RaminHAL9001/happlets-lib-gtk

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Happlets.Provider.ALSA
    Happlets.Provider.Cairo
    Happlets.Provider.Gtk2
    Happlets.Provider.Gtk2.Debug
  other-modules:
    Paths_happlets_lib_gtk
  default-extensions:
    DeriveDataTypeable
    DeriveFunctor
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImplicitParams
    LambdaCase
    MultiParamTypeClasses
    NoMonomorphismRestriction
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
  ghc-options:
    -Wall -Werror -fno-warn-name-shadowing -fno-warn-unused-do-bind
  build-depends:
      base
    , alsa-pcm
    , array
    , cairo
    , containers
    , directory
    , glib
    , gtk
    , happlets
    , lens
    , linear
    , mtl
    , pango
    , sample-frame
    , semigroups
    , text
    , time
    , vector

test-suite happlets-lib-gtk-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          HappletsGtkTests.hs
  other-modules:
    Paths_happlets_lib_gtk
  default-extensions:
    DeriveDataTypeable
    DeriveFunctor
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImplicitParams
    LambdaCase
    MultiParamTypeClasses
    NoMonomorphismRestriction
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
  ghc-options:
    -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind -threaded
  build-depends:
      base
    , alsa-pcm
    , array
    , cairo
    , containers
    , directory
    , glib
    , gtk
    , happlets
    , happlets-lib-gtk
    , lens
    , linear
    , mtl
    , pango
    , sample-frame
    , semigroups
    , text
    , time
